cabal-version: 3.0
name: rocksdb-haskell-kadena
version: 1.1.0
synopsis: Haskell bindings to RocksDB
homepage: http://github.com/kadena-io/rocksdb-haskell
license: BSD-3-Clause
license-file: LICENSE
author: Kim Altintop, Alexander Thiemann et.al. (see AUTHORS file)
maintainer: Edmund Noble <edmund@kadena.io>
copyright:
  Copyright (c) 2022 Kadena LLC
  Copyright (c) 2014 The rocksdb-haskell Authors
  Copyright (c) 2012-2014 The leveldb-haskell Authors
category: Database, FFI
stability: Experimental
build-type: Simple
tested-with: GHC == 8.0.1
description:
    This package includes the relevant RocksDB sources and builds RocksDB from
    source, which can take a long time.
    .
    In order to build this package the following libraries must be present in
    the system: gmp, gflags.
    .
    The build also requires the following optional libraries to be present in
    the system: snappy, z, bz2, lz4, zstd, tbb (see 'with-tbb' flag to disable).
    If one of these is missing, one
    has to comment out the respective entries in list of extra-libraries and the
    cxx-flags in the file rocksb-haskell-kadena.cabal.
    .
    From <http://rocksdb.org>:
    .
    RocksDB is an embeddable persistent key-value store for fast storage.
    RocksDB can also be the foundation for a client-server database but our
    current focus is on embedded workloads.
    .
    RocksDB builds on LevelDB to be scalable to run on servers with many CPU
    cores, to efficiently use fast storage, to support IO-bound, in-memory and
    write-once workloads, and to be flexible to allow for innovation.
extra-source-files:
    README.md
    AUTHORS

source-repository head
  type: git
  location: git://github.com/kadena-io/rocksdb-haskell.git

flag with-tbb
     description: Build with tbb support
     default: False
     manual: True

library
  hs-source-dirs:   src

  cxx-sources: cpp/chainweb-rocksdb.cpp
  include-dirs: cpp
  install-includes: chainweb-rocksdb.h
  exposed-modules:  Database.RocksDB
                  , Database.RocksDB.Base
                  , Database.RocksDB.C
                  , Database.RocksDB.Internal
                  , Database.RocksDB.Iterator
                  , Database.RocksDB.ReadOptions
                  , Database.RocksDB.Types

  default-language: Haskell2010
  other-extensions:
    CPP,
    ForeignFunctionInterface,
    EmptyDataDecls,
    RecordWildCards

  build-depends:
    base >= 4 && < 5,
    binary,
    bytestring,
    data-default,
    directory,
    filepath,
    transformers

  ghc-options:
    -Wall
    -- -optl-static-libstdc++
  -- ld-options: -static-libstdc++

  -- All of the following libraries are optional. If one of the libraries
  -- is not available on the build host, it can be commented out in the
  -- list below.
  --
  extra-libraries:
    snappy
    gflags
    z
    bz2
    lz4
    zstd
    stdc++
    rocksdb

  if flag(with-tbb)
    extra-libraries:
      tbb

  -- These options are extracted from CXXFLAGS the RocksDB Makefile
  cxx-options:
    -fno-rtti
    -g
    -W
    -Wextra
    -Wall
    -Wno-invalid-offsetof
    -Wsign-compare
    -Wshadow
    -Wunused-parameter
    -Werror
    -std=c++20
    -faligned-new
    -DNO_THREEWAY_CRC32C
    -DHAVE_ALIGNED_NEW
    -DROCKSDB_PLATFORM_POSIX
    -DROCKSDB_LIB_IO_POSIX
    -DSNAPPY
    -DGFLAGS=1
    -DZLIB
    -DBZIP2
    -DLZ4
    -DZSTD
    -DROCKSDB_BACKTRACE
    -mtune=generic
    -DROCKSDB_SUPPORT_THREAD_LOCAL
    -fno-omit-frame-pointer
    -momit-leaf-frame-pointer
    -DNDEBUG
    -Woverloaded-virtual
    -Wnon-virtual-dtor
    -Wno-missing-field-initializers
    -O2

  if arch(x86_64)
    cxx-options:
      -march=x86-64
      -msse3

  if flag(with-tbb)
    cxx-options:
      -DTBB

  if os(linux)
    cxx-options:
      -DOS_LINUX
      -fno-builtin-memcmp
      -DROCKSDB_FALLOCATE_PRESENT
      -DROCKSDB_MALLOC_USABLE_SIZE
      -DROCKSDB_PTHREAD_ADAPTIVE_MUTEX
      -DROCKSDB_RANGESYNC_PRESENT
      -DROCKSDB_SCHED_GETCPU_PRESENT
      -DROCKSDB_AUXV_GETAUXVAL_PRESENT

  if os(darwin)
    cxx-options:
      -DOS_MACOSX
      -Wshorten-64-to-32
      -DHAVE_FULLFSYNC

test-suite rocksdb-tests
  ghc-options: -Wall
  main-is: tests.hs
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  build-depends:       base >= 3 && < 5
                     , rocksdb-haskell-kadena
                     , hspec >= 1.8
                     , process >= 1.1.0.2
                     , bytestring >= 0.10.4.0
                     , data-default
                     , resourcet
                     , transformers
                     , temporary
                     , hspec-expectations
                     , QuickCheck
  default-language:    Haskell2010
